Fix page width overflowing with sidebar

--- a/src/Sidebar/index.scss
+++ b/src/Sidebar/index.scss
@@ -12,6 +12,7 @@
     position: relative;
     flex-grow: 1;
     max-height: 100%;
+    display: grid;
 
     @include wc.container-query(zero, ph) {
       min-height: 0;
